force-app/main/default/objects/Sample_API_Settings__c/Sample_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Boomi API</description>
    <label>Boomi API Settings</label>
</CustomObject>