force-app/main/default/objects/Sample_API_Settings__c/fields/Is_Live_Environment__c.field-meta.xml
<CustomField>
        <fullName>Is_Live_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true calls production apis.</description>
        <inlineHelpText>If true calls production apis.</inlineHelpText>
        <label>Is Live Environment</label>
        <type>Checkbox</type>
    </CustomField>