force-app/main/default/objects/Sample_API_Settings__c/fields/Production_Endpoint__c.field-meta.xml
<CustomField>
        <fullName>Production_Endpoint__c</fullName>
        <label>Production Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>