force-app/main/default/objects/Sample_API_Settings__c/fields/Production_Key__c.field-meta.xml
<CustomField>
        <fullName>Production_Key__c</fullName>
        <description>Authorization for Production.</description>
        <inlineHelpText>Authorization for Production.</inlineHelpText>
        <label>Production Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>