force-app/main/default/objects/Sample_API_Settings__c/fields/Test_Endpoint__c.field-meta.xml
<CustomField>
        <fullName>Test_Endpoint__c</fullName>
        <label>Test Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>