force-app/main/default/objects/Sample_API_Settings__c/fields/Test_Key__c.field-meta.xml
<CustomField>
    <fullName>Test_Key__c</fullName>
    <description>Authorization for Test.</description>
    <inlineHelpText>Authorization for Test.</inlineHelpText>
    <label>Test Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>